--- a/src/site.css
+++ b/src/site.css
@@ -1,137 +1,4 @@
-@charset "UTF-8";
-
-/* ---------------------------------------------------------
-Header
----------------------------------------------------------*/
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Muli', sans-serif;
-  font-weight: bold;
-}
-
-/**
- * Header
- */
- .header {
-  padding: 1.777em 1.125em 2.665em 1.125em;
-  margin-bottom: 4.209em;
+div #ajaxContent {
   background-color: #3e8bc5;
-  background-position: center center;
-  background-repeat: no-repeat;
-}
-.header p.toggle-container {
-  width: 2.369em;
-  height: 2.369em;
-  margin: 0 0 1.777em;
-}
-.header-index {
-  margin-bottom: 0;
-}
-
-   .header {
-    padding-top: 7.478em;
-    background-color: #3e8bc5;
-  }
-  .background-contrast .header {
-    margin-left: -3.157em;
-    margin-right: -3.157em;
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .background-contrast .footer {
-    margin-left: -3.157em;
-    margin-right: -3.157em;
-    padding-left: 3.157em;
-    padding-right: 3.157em;
-  }
-  .background-contrast .main-nav {
-    max-width: 69.75em;
-    margin: 0 auto;
-  }
-  .csstransforms3d.csstransitions .background-contrast .main-nav {
-    left: auto;
-  }
-  .site-title,
-.site-description {
-  color: #fff;
-}
-.site-title a,
-.site-description a {
-  color: #fff;
-}
-
-  .site-title {
-    font-weight: 400;
-    margin: 0;
-    margin-bottom: 1rem;
-    color: #444854;
-    line-height: 1.333;
-    position: relative;
-    text-align: left;
-    font-size: 4.209em;
-    letter-spacing: -2px;
-    font-weight: 300;
-    color: #fff;
-    margin-bottom: 0;
-  }
-  .site-title small {
-    filter: alpha(opacity=1.0 * 100);
-    -moz-opacity: 0.8;
-    -khtml-opacity: 0.8;
-    opacity: 0.8;
-  }
-  .site-title a {
-    text-decoration: none;
-  }
-
-.site-intro .avatar {
-  width: 128px;
-  height: auto;
-  display: block;
-  -webkit-border-radius: 100%;
-  border-radius: 100%;
-  -webkit-box-shadow: 0 0 0 0.618em rgba(0, 0, 0, 0.05);
-  box-shadow: 0 0 0 0.618em rgba(0, 0, 0, 0.05);
-}
-.site-intro .grav-clone {
-  display: none;
-}
-  .site-intro .site-title,
-  .site-intro .site-description {
-    text-align: center;
-  }
-
-  .site-description {
-    font-size: .844em;
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    filter: alpha(opacity=1.0 * 100);
-    -moz-opacity: 0.75;
-    -khtml-opacity: 0.75;
-    opacity: 0.75;
-  }
-
-.about-me-blurb {
   padding: 2em;
-  background-color: #f7f6f6;
-}
-
-
-/* ---------------------------------------------------------
-Images
----------------------------------------------------------*/
-
-img{
-  max-width: 100%;
-  height: auto;
-  width: 100%\9; /* ie8 */
-  display:block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
-div.math{
-  font-size: 1em;
 }
