--- a/src/articles/articles.css
+++ b/src/articles/articles.css
@@ -1,6 +1,9 @@
 /* ---------------------------------------------------------
 Articles
 ---------------------------------------------------------*/
+.article_container {
+  padding: 60px;
+}
 
 .article h1{
     font-weight: bold;
