--- a/src/articles/articles.css
+++ b/src/articles/articles.css
@@ -2,7 +2,7 @@
 Articles
 ---------------------------------------------------------*/
 .article_container {
-  padding: 1em;
+  padding: 60px 10px 20px 10px; 
 }
 
 .article h1{
